feat: :sparkles: endpoint de deposito retorna valor atual da conta
