# controllers/balance/deposit.js
@@ -3,9 +3,8 @@ const services = require('../../services');
 const deposit = async (req, res) => {
   const { id } = req.client;
   const { balance } = req.body;
-  await services.balance.deposit(id, balance);
-
-  return res.status(201).json({ message: 'Deposito com sucesso' });
+  const newBalance = await services.balance.deposit(id, balance);
+  return res.status(201).json({ balance: newBalance });
 };
 
 module.exports = deposit;
